--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,7 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\TextFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DalTweets.cs" />
+    <Compile Include="Repositories\DalUsers.cs" />
     <Compile Include="Repositories\TwitterRepository.cs" />
   </ItemGroup>
   <ItemGroup>
