--- a/TwitterService/Service.csproj
+++ b/TwitterService/Service.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Twitter\Writer.cs" />
+    <Compile Include="Twitter\Report.cs" />
     <Compile Include="Twitter\TwitterService.cs" />
   </ItemGroup>
   <ItemGroup>
