--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Interfaces\IDalUsers.cs" />
     <Compile Include="Interfaces\IReport.cs" />
     <Compile Include="Interfaces\ITextFIle.cs" />
+    <Compile Include="Interfaces\ITweetProcess.cs" />
     <Compile Include="Interfaces\ITwitterRepository.cs" />
     <Compile Include="Interfaces\ITwitterService.cs" />
     <Compile Include="Interfaces\IWriter.cs" />
