--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DalTweets.cs" />
     <Compile Include="Repositories\DalUsers.cs" />
+    <Compile Include="Repositories\TweetProcess.cs" />
     <Compile Include="Repositories\TwitterRepository.cs" />
   </ItemGroup>
   <ItemGroup>
