Add tweet length limit to report generator

--- a/AGAssignment/App.config
+++ b/AGAssignment/App.config
@@ -6,5 +6,6 @@
   <appSettings>
     <add key="UserFile" value="Data\user.txt"/>
     <add key="TweetFile" value="Data\tweet.txt"/>
+    <add key="LimitTweetTo" value="140"/>
   </appSettings>
 </configuration>
